[package]
name = "unwrap_helpers"
version = "0.2.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "Helper macros for unwrapping."
license = "MIT"
edition = "2021"
repository = "https://github.com/AscendingCreations/unwrap_helpers"
readme = "README.md"
documentation = "https://docs.rs/unwrap_helpers"
keywords = ["unwrap", "return", "macros", "option", "result"]

[dependencies]
loop_unwrap = "0.2"